# nakama-rs

./: Cargo.toml
.github/workflows/: rust-grcov.yml  rust.yml
codegen/: main.go
examples/: async.rs  async_single_threaded.rs  authentication.rs  socket.rs
examples/modules/: tournament.lua
nakama_macro/: Cargo.toml
nakama_macro/src/: lib.rs
src/: HttpAdapter.rs  api_client.rs  api_gen.rs  async_client.rs  client.rs  default_client.rs  error.rs  helper.rs  http_adapter.rs  lib.rs  socket.rs  socket_adapter.rs  test_helpers.rs  web_socket.rs  web_socket_adapter.rs
tests/: accounts.rs  authentication.rs  channel.rs  friends.rs  groups.rs  helpers.rs  leaderboards.rs  party.rs  session.rs  socket.rs  storage.rs  tournaments.rs
